--- a/app/index.html
+++ b/app/index.html
@@ -58,5 +58,255 @@ current: index
 
 <section class="container mt-6">
   <h2>熱門特展</h2>
+  <div class="card my-3 bg-light main-card">
+    <div class="row g-0 h-100">
+      <div class="col-md-4 overflow-hidden h-100">
+        <img
+          class="h-100"
+          src="./assets/images/alina-grubnyak-R84Oy89aNKs-unsplash.jpg"
+          alt="card_1"
+        />
+      </div>
+      <div class="col-md-6 p-5">
+        <div class="card-body h-100 d-flex row">
+          <div>
+            <h5 class="card-title">2020 台味設計展</h5>
+            <p class="card-text">$350</p>
+            <p class="card-text">
+              一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。
+            </p>
+          </div>
+          <div class="d-flex align-self-end">
+            <button type="button" class="btn btn-primary me-2">購買票券</button>
+            <button type="button" class="btn btn-outline-primary">
+              收藏展覽
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="offset-md-1 col-md-1">
+        <div class="h-100 py-5 d-flex row justify-content-between">
+          <p class="mt-2">
+            01 <br />JUN<br />
+            | <br />31<br />
+            OCT
+          </p>
+          <div class="d-flex align-self-end mb-4">
+            <img src="../assets/images/facebook-24px.svg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="card my-3 bg-light mt-4 main-card">
+    <div class="row g-0 h-100">
+      <div class="col-md-4 overflow-hidden h-100">
+        <img
+          class="h-100"
+          src="./assets/images/michel-catalisano--a0D9LpcKV8-unsplash.jpg"
+          alt="card_1"
+        />
+      </div>
+      <div class="col-md-6 p-5">
+        <div class="card-body h-100 d-flex row">
+          <div>
+            <h5 class="card-title">2020 台味設計展</h5>
+            <p class="card-text">$350</p>
+            <p class="card-text">
+              一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。
+            </p>
+          </div>
+          <div class="d-flex align-self-end">
+            <button type="button" class="btn btn-primary me-2">購買票券</button>
+            <button type="button" class="btn btn-outline-primary">
+              收藏展覽
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="offset-md-1 col-md-1">
+        <div class="h-100 py-5 d-flex row justify-content-between">
+          <p class="mt-2">
+            01 <br />JUN<br />
+            | <br />31<br />
+            OCT
+          </p>
+          <div class="d-flex align-self-end mb-4">
+            <img src="../assets/images/facebook-24px.svg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card my-3 bg-light mt-4 main-card">
+    <div class="row g-0 h-100">
+      <div class="col-md-4 overflow-hidden h-100">
+        <img
+          class="h-100"
+          src="./assets/images/moralis-tsai-8xsktFRw28I-unsplash.jpg"
+          alt="card_1"
+        />
+      </div>
+      <div class="col-md-6 p-5">
+        <div class="card-body h-100 d-flex row">
+          <div>
+            <h5 class="card-title">2020 台味設計展</h5>
+            <p class="card-text">$350</p>
+            <p class="card-text">
+              一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。
+            </p>
+          </div>
+          <div class="d-flex align-self-end">
+            <button type="button" class="btn btn-primary me-2">購買票券</button>
+            <button type="button" class="btn btn-outline-primary">
+              收藏展覽
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="offset-md-1 col-md-1">
+        <div class="h-100 py-5 d-flex row justify-content-between">
+          <p class="mt-2">
+            01 <br />JUN<br />
+            | <br />31<br />
+            OCT
+          </p>
+          <div class="d-flex align-self-end mb-4">
+            <img src="../assets/images/facebook-24px.svg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
+
+<section class="container mt-6">
+  <h2>直播回顧</h2>
+  <div class="review text-white container">
+    <div class="row h-100">
+      <div class="box bg-primary col-5 py-7 h-100 px-5">
+        <h3>
+          開幕對談<span class="border-start border-2 border-white ms-3 ps-3"
+            >藝術展演巡禮</span
+          >
+        </h3>
+        <img class="mt-6 mb-3" src="../assets/images/people.png" alt="" />
+        <h5>臺北現代聯合總監 <span>Ken Hsu</span></h5>
+        <p class="fs-5">
+          獨家由藝術家、策展人、畫廊總監帶您欣賞台北藝術特展，感受雕塑、展演及當代日常文化之間微妙的關係。
+        </p>
+        <button class="btn btn-secondary">點此觀看</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="container mt-6">
+  <h2>猜你也喜歡...</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-11 offset-md-1">
+        <div class="swiper-container mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="card w-100">
+                <img src="https://images.unsplash.com/photo-1492087368735-957f2d176504?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=960&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">No.22 線上設計展</h5>
+                  <p class="card-text">$350</p>
+                </div>
+              </div> 
+            </div>
+            <div class="swiper-slide">
+              <div class="card w-100">
+              <img src="https://images.unsplash.com/photo-1567722681579-c671cabd2810?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=334&q=80" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">No.22 線上設計展</h5>
+                <p class="card-text">$350</p>
+              </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card w-100">
+              <img src="https://images.unsplash.com/photo-1578402025217-920675beb3c3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1065&q=80" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">No.22 線上設計展</h5>
+                <p class="card-text">$350</p>
+              </div>
+              </div>
+            </div>
+             <div class="swiper-slide">
+              <div class="card w-100">
+                <img src="https://images.unsplash.com/photo-1492087368735-957f2d176504?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=960&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">No.22 線上設計展</h5>
+                  <p class="card-text">$350</p>
+                </div>
+              </div> 
+            </div>
+            <div class="swiper-slide">
+              <div class="card w-100">
+              <img src="https://images.unsplash.com/photo-1567722681579-c671cabd2810?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=334&q=80" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">No.22 線上設計展</h5>
+                <p class="card-text">$350</p>
+              </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card w-100">
+              <img src="https://images.unsplash.com/photo-1578402025217-920675beb3c3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1065&q=80" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">No.22 線上設計展</h5>
+                <p class="card-text">$350</p>
+              </div>
+              </div>
+            </div>
+             <div class="swiper-slide">
+              <div class="card w-100">
+                <img src="https://images.unsplash.com/photo-1492087368735-957f2d176504?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=960&q=80" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">No.22 線上設計展</h5>
+                  <p class="card-text">$350</p>
+                </div>
+              </div> 
+            </div>
+            <div class="swiper-slide">
+              <div class="card w-100">
+              <img src="https://images.unsplash.com/photo-1567722681579-c671cabd2810?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=334&q=80" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">No.22 線上設計展</h5>
+                <p class="card-text">$350</p>
+              </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card w-100">
+              <img src="https://images.unsplash.com/photo-1578402025217-920675beb3c3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1065&q=80" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">No.22 線上設計展</h5>
+                <p class="card-text">$350</p>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script>
+var swiper = new Swiper(".mySwiper", {
+  slidesPerView: 1,
+    spaceBetween: 30,
+    breakpoints: {
+      768:{
+        slidesPerView: 3,
+        spaceBetween: 30,
+      },
+    }
+});
+</script>
